[package]
name = "control_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls-0_21"] }
actix-files = "0"
serde = { version = "1.0", features = ["derive"] }
rustls = "0.21"
rustls-pemfile = "1.0"
