[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
config = "0.15.22"
cron = "0.16.0"
hex = "0.4.3"
kasa-core = "0.6.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tokio-memq = "1.0.0"
toml = "1.1.2"
toml_writer = "1.1.1"
