[package]
name = "node"
version = "0.1.0"
edition = "2024"
default-run = "node"

[dependencies]
axum = "0.8.9"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.22"
cron = "0.16.0"
hex = "0.4.3"
kasa-core = "0.6.0"
rand = "0.10.1"
reqwest-middleware = { version = "0.5.1", features = ["json", "rustls", "form", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1" }
tokio-cron-scheduler = "0.15.1"
tokio-memq = "1.0.0"
toml = "1.1.2"
toml_writer = "1.1.1"
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = { version = "0.1.44", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
turso = "0.5.3"
